--- a/frontend/simple-facebook/src/index.css
+++ b/frontend/simple-facebook/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: rgba(0, 0, 0, 0.87);
-  background-color: #e0f1ff;
+  background-color: #aedbff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
